<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    android:focusableInTouchMode="true"

    android:background="@color/main_act_back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lobster"
        android:text="@string/welcome_dear"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/lobster"
        android:paddingLeft="14dp"
        android:text="@string/please_select_your_language"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
         />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/L_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <com.toptoche.searchablespinnerlibrary.SearchableSpinner

                android:id="@+id/spinner1"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/blue_light" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/blue_light"
                android:focusable="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_light"
                    android:hint="@string/enter_your_text"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lobster"
                android:padding="10dp"
                android:text="@string/please_select_language_you_wish_to_convert_your_text"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <com.toptoche.searchablespinnerlibrary.SearchableSpinner

                android:id="@+id/spinner2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:background="@color/blue_light" />


            <Button
                android:id="@+id/btnTranslate"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/yellow"
                android:fontFamily="@font/courgette"
                android:text="@string/translate"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@null">

            </Button>


            <TextView

                android:id="@+id/translatedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonbackground"
                android:fontFamily="@font/courgette"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:padding="20dp"

                />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>



